--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "src/index.html",
   "scripts": {
-    "test": "yes"
+    "test": "yes",
+    "build": "parcel build src/index.html"
   },
   "repository": {
     "type": "git",
