--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Alberto-12/myFlix-client#readme",
   "dependencies": {
     "axios": "^0.21.1",
+    "parcel-bundler": "^1.12.3",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
